check role, fix css login register